@@ -6,6 +6,7 @@ Xfdesktop 4.x.y
     Patch by xaizek@gmail.com.
   * Scroll to the selected background in the settings (bug #7087).
   * Handle volume changes in a timeout (bug #7025).
+  * Implement monitoring for special file icons (bug #6986).
 
 
 Xfdesktop 4.8.0
